--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "notifyme",
+	"name": "notifymejs",
 	"version": "0.0.1",
 	"description": "Notifications with pure javascript",
 	"main": "./dist/js/notifyme.js",
