--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "toastmejs",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"description": "Web notifications and dialogs with pure javascript",
-	"main": "./js/toastme.js",
+	"main": "./src/js/toastme.js",
 	"author": {
 		"name": "alexsegen",
 		"url": "https://pixelagil.com"
