--- a/package.json
+++ b/package.json
@@ -20,22 +20,29 @@
 		"url": "git+https://github.com/alexsegen/toastmejs.git"
 	},
 	"devDependencies": {
-		"gulp": "4.0.0",
+		"babel-core": "^6.26.3",
+		"babel-preset-env": "^1.7.0",
+		"browser-sync": "2.26.3",
 		"del": "3.0.0",
-		"lazypipe": "1.0.1",
+		"gulp": "4.0.0",
+		"gulp-autoprefixer": "6.0.0",
+		"gulp-babel": "^7.0.1",
+		"gulp-concat": "^2.6.1",
+		"gulp-cssnano": "2.1.3",
 		"gulp-flatmap": "1.0.2",
 		"gulp-header": "2.0.5",
-		"gulp-rename": "1.4.0",
-		"jshint": "2.9.6",
 		"gulp-jshint": "2.1.0",
-		"jshint-stylish": "2.2.1",
-		"gulp-concat": "2.6.1",
-		"gulp-terser": "1.1.7",
 		"gulp-optimize-js": "1.1.0",
+		"gulp-rename": "1.4.0",
 		"gulp-sass": "4.0.2",
-		"gulp-cssnano": "2.1.3",
-		"gulp-autoprefixer": "6.0.0",
 		"gulp-svgmin": "2.1.0",
-		"browser-sync": "2.26.3"
+		"gulp-terser": "1.1.7",
+		"jshint": "2.9.6",
+		"jshint-stylish": "2.2.1",
+		"lazypipe": "1.0.1"
+	},
+	"dependencies": {
+		"gulp-sourcemaps": "^2.6.5",
+		"gulp-uglify": "^3.0.2"
 	}
 }
