--- a/package.json
+++ b/package.json
@@ -29,24 +29,24 @@
 		"babel-preset-env": "^1.7.0",
 		"browser-sync": "^2.26.7",
 		"del": "3.0.0",
-		"gulp": "^4.0.2",
+		"gulp": "4.0.0",
+		"gulp-autoprefixer": "6.0.0",
+		"gulp-babel": "^7.0.1",
+		"gulp-concat": "^2.6.1",
+		"gulp-cssnano": "2.1.3",
+		"gulp-flatmap": "1.0.2",
+		"gulp-header": "2.0.5",
+		"gulp-jshint": "2.1.0",
+		"gulp-optimize-js": "1.1.0",
+		"gulp-rename": "1.4.0",
+		"gulp-sass": "4.0.2",
+		"gulp-svgmin": "2.1.0",
+		"gulp-terser": "1.1.7",
 		"jshint": "2.9.6",
-		"jshint-stylish": "^2.2.1",
-		"lazypipe": "^1.0.1"
+		"jshint-stylish": "2.2.1",
+		"lazypipe": "1.0.1"
 	},
 	"dependencies": {
-		"@babel/core": "^7.8.4",
-		"cross-env": "^5.2.0",
-		"gulp-autoprefixer": "^7.0.1",
-		"gulp-babel": "^8.0.0",
-		"gulp-concat": "^2.6.1",
-		"gulp-cssnano": "^2.1.3",
-		"gulp-flatmap": "^1.0.2",
-		"gulp-header": "^2.0.9",
-		"gulp-jshint": "^2.1.0",
-		"gulp-optimize-js": "^1.1.0",
-		"gulp-rename": "^2.0.0",
-		"gulp-sass": "^4.0.2",
-		"gulp-terser": "^1.2.0"
+		"cross-env": "^5.2.0"
 	}
 }
