--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
 		"url": "git+https://github.com/alexsegen/toastmejs.git"
 	},
 	"devDependencies": {
+		"@types/node": "^16.6.1",
+		"gulp-typescript": "*",
+		"typescript": "^3.9.10",
 		"babel-core": "^6.26.3",
 		"babel-preset-env": "^1.7.0",
 		"browser-sync": "^2.26.7",
